--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -1,15 +1,26 @@
-  #root {
-    width:auto;
-    height:auto;
+/*
+* {
+    border: solid 1px;
+  }
+*/
+  html,body{  
+    margin: 0px; 
+    height:100%;       
+  }
+  
+  #root {    
+    width: 100%;
+    height:100%;       
     position: relative;
   }
   
   .landing {   
-    width: 600px;
-    height: 141px;  
     position: absolute;
     top: 50%;
     left: 50%;
+    margin: -150px 0 0 -300px;
+    width: 600px;
+    height: 150px;      
     font-family: Gugi;
     font-size: 141px;
     text-align:center;
