--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -7,6 +7,15 @@
     margin: 0px; 
     height:100%;       
   }
+
+  #landingvideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    z-index: -2;
+  }
   
   #root {    
     width: 100%;
@@ -24,6 +33,7 @@
     font-family: Gugi;
     font-size: 141px;
     text-align:center;
+    color:#ffffff;
     z-index:1;
   }
   
