整合不必要的jsx

--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -1,8 +1,10 @@
+
 /*
 * {
     border: solid 1px;
   }
-*/
+  */
+
   html,body{  
     margin: 0; 
     padding: 0;
@@ -31,7 +33,7 @@
     width: 100%;
     height:100%;
     position: absolute;     
-    background-color: black;     
+    background-color: black;
     z-index: -3; 
   }
   
@@ -39,16 +41,13 @@
     position: absolute;     
     right: 0;
     bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
     width: 100%;
-    height: 100%;    
-    margin: 0px; 
+    height: 100%;     
     z-index: -2;
   }
 
   .landing {   
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
     margin: -150px 0 0 -300px;
@@ -59,6 +58,15 @@
     text-align:center;
     color:#ffffff;   
   }
+
+  .landing::after {
+    content: "";
+    position: absolue;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    border-top: solid 30px rgba(255, 0, 0, 0.5);
+  }
   
   .sublanding{  
     height: 49px;
@@ -68,15 +76,22 @@
   .line {
     width: 600px;
     height: 47px;
-    border-radius: 20px;
-    background-color: #ff8a5f;
+    border-radius: 20px;   
     z-index:-1;
     margin-top: -60px;
   }
 
   .content{    
     width: 100%;
-    height:100%;    
+    height:100%;           
+    position: relative;      
+  }
+
+  .project{
     position: relative;
-    z-index:1;
+    top: 50%;
+    left: 50%;
+    margin: -300px 0 0 -700px;
+    width: 1400px;
+    height: 600px;
   }
