--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -7,26 +7,27 @@
 
   html,body{  
     margin: 0; 
-    padding: 0;
-    height:100%;       
+    padding: 0;    
+    height: 100%;   
   }
   
-  #root {        
-    width: 100%;
-    height:100%;           
+  #root {  
     position: relative;
+    width: 100%;
+    height:100%;   
+    
   }
 
   .main{    
-    width: 100%;
-    height:100%;    
     position: relative;
+    width: 100%;
+    height:100%;        
   }
 
- .top{    
+ .top{   
+    position: absolute; 
     width: 100%;
-    height:100%;           
-    position: relative;    
+    height:100%;      
   }
 
   .landingvideobg{
@@ -41,13 +42,15 @@
     position: absolute;     
     right: 0;
     bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
     width: 100%;
-    height: 100%;     
+    height: 100%;   
     z-index: -2;
   }
 
   .landing {   
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     margin: -150px 0 0 -300px;
@@ -68,7 +71,7 @@
     border-radius: 20px;   
     bottom: 0;
     border-top: solid 40px rgba(255, 138, 95, 0.8);
-      z-index: -1;
+    z-index: -1;
   }
   
   .sublanding{  
@@ -85,16 +88,9 @@
   }
 
   .content{    
+    position: relative;  
     width: 100%;
-    height:100%;           
-    position: relative;      
+    height:100%;   
   }
 
-  .project{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    margin: -300px 0 0 -700px;
-    width: 1400px;
-    height: 600px;
-  }
+  
