--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -36,17 +36,15 @@
     position: absolute;     
     background-color: black;
     z-index: -3; 
-  }
-  
-  .landingvideo {
+  }  
+
+  .landingvideo {    
     position: absolute;     
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: 100%;
-    height: 100%;   
-    z-index: -2;
+    object-fit: fill;    
+    height:100%;
+    width:100%;
+    overflow: hidden;
+    z-index: -2;    
   }
 
   .landing {   
