--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,14 +1,15 @@
-
 /*
+
 * {
     border: solid 1px;
   }
-  */
+*/
 
   html,body{  
     margin: 0; 
     padding: 0;    
     height: 100%;   
+    font-family: 微軟正黑體;
   }
   
   #root {  
@@ -91,4 +92,105 @@
     height:100%;   
   }
 
+  img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .project{
+    position: relative;
+     top: 50%;
+     left: 50%;
+     margin: -19% 0 0 -40%;
+     width: 80%;
+     height: 80%;
+ }
+
+ .project1{
+  position: relative;
+   top: 50%;
+   left: 50%;
+   margin: -7% 0 0 -40%;
+   width: 80%;
+   height: 80%;
+}
+ 
+.projectcover-left{
+  position: absolute;
+  margin-top: 5%;
+  width : 50%;
+  height : 60%;
+  box-shadow: 0 0 20px 0 rgba(32, 31, 31, 0.16);
+}
+
+.projecttitle-right{
+  position: absolute;
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 10%;
+  margin-left: 55%;
+  width : 40%;
+  height : 12%;  
+}
+
+.projecttitle-right::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  display: inline-block;
+  border-radius: 20px;   
+  bottom: 0;
+  border-top: solid 40px rgba(0, 120, 178, 0.8);
+  z-index: -1;
+}
+
+.projectcontent-right{
+  position: absolute;
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 18%;
+  margin-left: 55%;
+  width : 40%;
+  height : 50%;
   
+}
+
+.projectcover-right{
+  position: absolute;
+  margin-top: 5%;
+  margin-left: 50%;
+  width : 50%;
+  height : 60%;
+  box-shadow: 0 0 20px 0 rgba(32, 31, 31, 0.16);
+}
+
+.projecttitle-left{
+  position: absolute;
+  font-size: 50px;
+  font-weight: bold;
+  margin-top: 10%;  
+  width : 40%;
+  height : 12%;  
+}
+
+.projecttitle-left::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  width: 100%;
+  display: inline-block;
+  border-radius: 20px;   
+  bottom: 0;
+  border-top: solid 40px rgba(242, 135, 183, 0.8);
+  z-index: -1;
+}
+
+.projectcontent-left{
+  position: absolute;
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 18%;  
+  width : 40%;
+  height : 50%; 
+}
