--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,9 +1,16 @@
-/*
 
+/*
 * {
     border: solid 1px;
   }
 */
+/*
+* {
+  border : solid 0.1px;
+  border-color : transparent;
+}
+*/
+
 
   html,body{  
     margin: 0; 
@@ -86,6 +93,12 @@
     margin-top: -60px;
   }
 
+  .test{
+    position: relative;  
+    width: 100%;
+    height:100%;   
+  }
+
   .content{    
     position: relative;  
     width: 100%;
@@ -105,15 +118,6 @@
      width: 80%;
      height: 80%;
  }
-
- .project1{
-  position: relative;
-   top: 50%;
-   left: 50%;
-   margin: -7% 0 0 -40%;
-   width: 80%;
-   height: 80%;
-}
  
 .projectcover-left{
   position: absolute;
