--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -111,7 +111,7 @@
   }
 
   .project{
-    position: relative;
+    position: absolute;
      top: 50%;
      left: 50%;
      margin: -19% 0 0 -40%;
